# snes-emulator

./: .gitignore  CMakeLists.txt  README.md
include/components/: apubus.hpp  bus.hpp  common.hpp  component.hpp  cpu.hpp  dma_controller.hpp  opcode_engine.hpp  ppu.hpp  ppu_data.hpp  renderer.hpp  ricoh_5a22.hpp  snes.hpp  spc_700.hpp
include/cpu_operations/: addressing_modes.hpp  ricoh_5a22_emulation_optable.hpp  ricoh_5a22_native_optable.hpp  ricoh_5a22_operations.hpp  ricoh_5a22_optable.hpp  spc_700_operations.hpp  spc_700_optable.hpp
include/mappers/: exhirom_mapper.hpp  hirom_mapper.hpp  lorom_mapper.hpp  mapper.hpp
include/misc/: common.hpp  options.hpp  rom_loader.hpp  utility.hpp
include/stores/: apu_ports.hpp  cartridge.hpp  cpu_dma_ports.hpp  cpu_ports.hpp  expansion_data.hpp  open_bus.hpp  ppu_ports.hpp  store.hpp  wram.hpp  wram_access.hpp
include/testing/: json.hpp  test_harness.hpp
src/: main.cpp
src/components/: bus.cpp  cartridge.cpp  common.cpp  dma_controller.cpp  opcode_engine.cpp  ppu.cpp  ricoh_5a22.cpp  snes.cpp  spc_700.cpp
src/cpu_operations/: ricoh_5a22_addressing_modes.hpp  ricoh_5a22_operations.cpp  spc_700_addressing_modes.hpp  spc_700_operations.cpp
src/mappers/: mapper.cpp
src/misc/: common.cpp  rom_loader.cpp  utility.cpp
src/testing/: test_harness.cpp
